# perfectreader

./: .gitattributes  .gitignore  .gitmodules  COPYRIGHT.txt  CREDITS.txt  Readme.txt  build.gradle  settings.gradle  utils.gradle
app/: build.gradle  proguard-android.pro  (+7 more)
util/util-android/: CMakeLists.txt  build.gradle
util/util-android/src/main/: AndroidManifest.xml  CMakeLists.txt
util/util-android/src/main/cpp/: CorrectGamma.cpp  OpenGL.cpp  Resizes.cpp
util/util-android/src/main/cpp/util/: Debug.cpp  JniUtils.cpp  JniUtils.h
util/util-android/src/main/cppLibs/cair/: Source.txt
util/util-android/src/main/kotlin/com/dmi/util/: AndroidPaths.kt  ResourceUtils.kt  TypeConverters.kt  Units.kt
util/util-android/src/main/kotlin/com/dmi/util/base/: BaseActivity.kt  BaseApplication.kt  BaseController.kt  BasePresenter.kt  BaseUtils.kt  BaseView.kt  BaseViewModel.kt
util/util-android/src/main/kotlin/com/dmi/util/concurrent/: Threads.kt
util/util-android/src/main/kotlin/com/dmi/util/db/: DatabaseUpgrades.kt
util/util-android/src/main/kotlin/com/dmi/util/ext/: ListenersExt.kt  SQLiteDatabaseExt.kt  ViewExt.kt
util/util-android/src/main/kotlin/com/dmi/util/io/: AssetsFileSource.kt
util/util-android/src/main/kotlin/com/dmi/util/layout/: HasLayout.kt
util/util-android/src/main/res/drawable/: checkable_image_button_background.xml
util/util-android/src/main/res/raw/: shader_color_plane_vertex.glsl  shader_plane_vertex.glsl  shader_texture_background_fragment.glsl  shader_texture_background_vertex.glsl
util/util-android/src/main/res/values/: strings.xml
(+1845 files in other folders)
